# eta

./: .cvsignore  ChangeLog  HACKING.ja  INSTALL  INSTALL.ja  Makefile.am  README  README.ja  acinclude.m4  config.h.in  configure.in  dblist.xml  eta.glade
po/: eta.pot  ja.po
src/: .cvsignore  Makefile.am  callbacks.c  callbacks.h  dblist.c  dblist.h  interface.c  main.c  z3950.c  z3950.h
